fix: Shelf of already added books not showing in Search Page

--- a/src/App.css
+++ b/src/App.css
@@ -165,6 +165,7 @@ body,
 }
 
 .book-shelf-details {
+  text-align: center;
   line-height: 40px;
   font-size: 10px;
   position: absolute;
